fixed collapse button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,7 +181,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   padding: 20px;
   z-index: 1000;
   border: 1px solid #000000;
@@ -246,7 +245,9 @@
   cursor: pointer;
 }
 
-
+.collapseIconClasses { 
+  position: relative;
+}
 
 
 
